# torchfed

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
example/FedAvg/: train.py
example/centralized/fedavg/: train.py
example/decentralized/defta/: config.py  train.py
example/decentralized/fedavg/: train.py  train_autotune.py
example/fedavg/: train.py
example/simulation/centralized-fedavg/: train.py
example/simulation/decentralized-fedavg/: train.py
example/simulation/fedavg/: train.py
scripts/: visualizer_replay.py
test/modules/: test_data_distributing.py  test_training.py
test/routers/: test_router.py
tests/modules/: test_data_distributing.py  test_training.py
tests/routers/: test_router.py  test_torch_distributed_rpc_router.py
torchfed/: logging.py
torchfed/base/backend/: BaseBackend.py  LocalBackend.py  __init__.py
torchfed/component/: AverageComponent.py  PullFromOthersComponent.py  PullFromServerComponent.py  PushToOthersComponent.py  PushToPeersComponent.py  SimpleCustomComponent.py  TestComponent.py  TrainComponent.py  __init__.py
torchfed/datasets/: CIFAR10.py  MNIST.py  __init__.py  dataset.py
torchfed/managers/: dataset_manager.py
torchfed/models/: CIFARNet.py  __init__.py
torchfed/modules/: module.py
torchfed/routers/: __init__.py  p2p_router.py  router.py  router_msg.py  torch_distributed_rpc_router.py
torchfed/types/: datasets.py  meta.py  named.py
torchfed/utils/: cuda.py  datasets.py  decorator.py  hash.py  helper.py  object.py  plotter.py
(+33 files in other folders)
